[package]
name = "termbox"
version = "0.0.13"
authors = ["Daggerbot <daggerbot@gmail.com>"]
description = "High level binding for Termbox."
repository = "https://github.com/daggerbot/termbox-rs"
license = "Zlib"
documentation = "http://daggerbot.github.io/doc/termbox-rs/termbox/index.html"

[dependencies]
aurum-numeric = { git = "https://github.com/daggerbot/aurum-numeric" }
termbox-sys = "*"
