[package]
name = "termbox"
version = "0.1.1"
authors = ["Daggerbot <daggerbot@gmail.com>"]
description = "High level binding for Termbox."
repository = "https://github.com/daggerbot/termbox-rs"
license = "Zlib"
documentation = "http://daggerbot.github.io/doc/termbox-rs/termbox/index.html"

[dependencies]
aurum-numeric = "0.1.3"
termbox-sys = "0.2.9"
