[package]
name = "termbox"
version = "0.2.0"
authors = ["Daggerbot <daggerbot@gmail.com>"]
description = "High level binding for Termbox."
repository = "https://github.com/daggerbot/termbox-rs"
license = "Zlib"
documentation = "http://daggerbot.github.io/doc/termbox-rs/termbox/index.html"

[dependencies]
termbox-sys = "0.2.9"
try_from = "0.2.1"
